<resources>
    <string name="app_name">CC10624TriviaApp</string>
    <string name="btn_True">True</string>
    <string name="btn_False">False</string>
    <string name="btn_Next">Next</string>
    <string name="btn_Previous">Previous</string>
    <string name="msgcorrect">Your answer is Correct</string>
    <string name="msgincorrect">Your answer Incorrect</string>
    <string name="author">Author: Ananayo, Kevin Klein V.</string>
    <string name="q1">Q1.Spiders have six legs.</string>
    <string name="q2">Q2.The colour of chlorophyll is black.</string>
    <string name="q3">Q3. Herbivores eat meat</string>
    <string name="q4">Q4.Sharks are mammals.</string>
    <string name="q5">Q5.Plants respire during the day as well as at night.</string>
    <string name="q6">
        Q6.In biological bonds atoms interact based on their electron </string>
    <string name="q7">Q7.Cells near the top of leaves are called green cells.</string>
    <string name="q8">
        Q8.The study of plants is known as botany..</string>
    <string name="q9">Q9.Stomata allow oxygen to diffuse into the leaves.</string>
    <string name="q10">Q10.The human skeleton is made up of less than 200 bones.</string>
    <string name ="end">Thank you for answering. Your Score is</string>
</resources>